Move out dir to build/app
On masted it's build/app/dist.

We don't want to use build directly, as the app is being packaged in
build/release.

--- a/web/packages/teleterm/package.json
+++ b/web/packages/teleterm/package.json
@@ -2,7 +2,7 @@
   "name": "@gravitational/teleterm",
   "version": "1.0.0-dev",
   "description": "Teleport Connect",
-  "main": "build/main/index.js",
+  "main": "build/app/main/index.js",
   "author": {
     "name": "Gravitational, Inc.",
     "email": "support@goteleport.com",
