--- a/web/packages/teleterm/package.json
+++ b/web/packages/teleterm/package.json
@@ -26,23 +26,25 @@
   "private": true,
   "homepage": "https://goteleport.com",
   "dependencies": {
-    "@types/tar-fs": "^2.0.1",
+    "@grpc/grpc-js": "1.8.8",
+    "node-forge": "^1.3.1",
     "node-pty": "1.1.0-beta5",
+    "split2": "4.1.0",
     "strip-ansi": "^7.1.0",
-    "tar-fs": "^3.0.3"
+    "tar-fs": "^3.0.3",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@gravitational/build": "^1.0.0",
     "@gravitational/design": "1.0.0",
     "@gravitational/shared": "1.0.0",
-    "@grpc/grpc-js": "1.8.8",
     "@protobuf-ts/runtime": "^2.9.3",
     "@protobuf-ts/runtime-rpc": "^2.9.3",
     "@types/google-protobuf": "^3.10.0",
     "@types/node-forge": "^1.0.4",
+    "@types/tar-fs": "^2.0.1",
     "@types/whatwg-url": "^11.0.1",
     "clean-webpack-plugin": "4.0.0",
-    "cross-env": "5.0.5",
     "electron": "28.1.1",
     "electron-notarize": "^1.2.1",
     "electron-vite": "^2.0.0",
@@ -51,14 +53,11 @@
     "google-protobuf": "^3.21.2",
     "immer": "^9.0.7",
     "jest-canvas-mock": "^2.3.1",
-    "node-forge": "^1.3.1",
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
-    "split2": "4.1.0",
     "ts-loader": "^9.4.2",
     "vite-plugin-commonjs": "^0.10.1",
     "whatwg-url": "^13.0.0",
-    "winston": "^3.3.3",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
     "zod": "^3.22.3",
