--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start-teleport-e": "yarn workspace @gravitational/teleport.e start",
     "build-term": "yarn workspace @gravitational/teleterm build",
     "start-term": "yarn workspace @gravitational/teleterm start",
-    "dev-term": "yarn workspace @gravitational/teleterm dev",
+    "start-term-skip-native-deps": "yarn workspace @gravitational/teleterm start-skip-native-deps",
     "package-term": "yarn workspace @gravitational/teleterm package",
     "storybook": "start-storybook -p 9002 -c web/.storybook -s web/.storybook/public",
     "storybook-smoke-test": "yarn storybook --ci --smoke-test",
