--- a/web/packages/teleterm/package.json
+++ b/web/packages/teleterm/package.json
@@ -10,8 +10,8 @@
   },
   "license": "Apache-2.0",
   "scripts": {
-    "start": "yarn build-native-deps && yarn dev",
-    "dev": "electron-vite dev",
+    "start": "yarn build-native-deps && yarn start-skip-native-deps",
+    "start-skip-native-deps": "electron-vite dev",
     "start-electron": "electron build/app/dist/main/main.js",
     "build": "electron-vite build",
     "build-native-deps": "electron-builder install-app-deps",
